--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div id="header">
-  <div id="titre">
+  <div id="titre" class="hide-for-small-only">
     Fruits
   </div>
   <div id="menu">
@@ -41,7 +41,7 @@
             Séries
         </a>
     </div>
-    <div id="options">
+    <div id="options" class="hide-for-small-only">
     	<input type="text" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
     </div>
   </div>
