Ajoute des icones de dossier (from iconic)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/foundation.css">
+  <link href="bower_components/open-iconic/font/css/open-iconic-foundation.css" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
   
   <script src="js/vendor/modernizr.js"></script>
