--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <a title="Séries" href="#/series" class="cat" ng-class="page == 'series' && 'actif'">
             Séries
         </a>
+	<a title="Serveurs" href="#/serveurs" class="cat" ng-class="page == 'serveurs' && 'actif'">
+            Serveurs
+        </a>
     </div>
     <div id="options" class="hide-for-small-only">
     	<input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
