--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         </a>
     </div>
     <div id="options" class="hide-for-small-only">
-    	<input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
+	<form ng-submit="search()">
+	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
+	    <input type="submit" class="hide" />
+	</form>
     </div>
   </div>
   <div class="barred"></div>
