--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
 </head>
-<body>
+<body key-trap>
 <div id="header">
   <div id="titre" class="hide-for-small-only">
     Fruits
