--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             Tri<select ng-model="rtri" ng-init="rtri = 'popularity'">
                     <option value="popularity">Popularité</option>
                     <option value="title">Nom</option>
+                    <option value="release_date">Date de sortie</option>
                 </select>
         </div>
     </div>
