--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Serveurs
         </a>
         <div class="cat" ng-hide="page == 'serveurs'">
-            Tri<select ng-model="rtri" ng-init="rtri = 'popularity'">
+            Tri :<select ng-model="rtri" ng-init="rtri = 'popularity'">
                     <option value="popularity">Popularité</option>
                     <option value="title">Nom</option>
                     <option value="release_date">Date de sortie</option>
