--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/angular-moment/angular-moment.js"></script>
   <script src="bower_components/moment/lang/fr.js"></script>
+  <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
   <script src="js/app.js"></script>
   <!-- <script src="js/animations.js"></script> -->
   <script src="js/controllers.js"></script>
