Ajoute un petit lien avec les fruits

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body key-trap>
 <div id="header">
   <div id="titre" class="hide-for-small-only">
-    Fruits
+    <span class="leger">Il a </span>Fruits<span class="leger">, il a tout compris !</span>
   </div>
   <div id="menu">
     <div id="categories">
