--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/app.css">
   
   <script src="js/vendor/modernizr.js"></script>
-  <script src="bower_components/jquery/jquery.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/Vague.js/Vague.js"></script>
   <script src="lib/blur.js"></script>
   <script src="bower_components/angular/angular.js"></script>
