--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>Fruits v5</title>
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/foundation.css">
   <link href="bower_components/open-iconic/font/css/open-iconic-foundation.css" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="apple-touch-icon" href="favicon.png" />
   
   <script src="js/vendor/modernizr.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
