Ajoute la page nouveautés Corrige qq bugs

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <a title="Séries" href="#/series" class="cat" ng-class="page == 'series' && 'actif'">
             Séries
         </a>
+        <a title="Nouveautés" href="#/new" class="cat" ng-class="page == 'new' && 'actif'">
+            Nouveautés
+        </a>
         <a title="Serveurs" href="#/serveurs" class="cat" ng-class="page == 'serveurs' && 'actif'">
             Serveurs
         </a>
