--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   
   <script src="js/vendor/modernizr.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/Vague.js/Vague.js"></script>
-  <script src="lib/blur.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
@@ -26,7 +24,7 @@
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/angular-moment/angular-moment.js"></script>
   <script src="bower_components/moment/lang/fr.js"></script>
-  <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
+  <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
   <script src="js/app.js"></script>
   <!-- <script src="js/animations.js"></script> -->
   <script src="js/controllers.js"></script>
@@ -79,38 +77,6 @@
   <script src="js/foundation.min.js"></script>
   <script>
 	$(document).foundation();
-	/*
-	$('#header').blurjs({
-	    customClass: 'blurjs',
-	    radius: 5,
-	    persist: false
-	});
-	*/
-	/*
-	var vague = $('#header').Vague({
-	    intensity:      3,      // Blur Intensity
-	    forceSVGUrl:    false,   // Force absolute path to the SVG filter,
-	    // default animation options
-	    animationOptions: {
-	      duration: 1000,
-	      easing: 'linear' // here you can use also custom jQuery easing functions
-	    }
-	});
-
-	vague.blur();
-	*/
-	$.fn.animatecss = function(anim, time, cb) {
-	    if (time) this.css('-webkit-transition', time / 1000 + 's');
-	    this.addClass(anim);
-	    if ($.isFunction(cb)) {
-	        setTimeout(function() {
-	            // Ensure that the element is available inside the callback.
-	            $(this).each(cb);
-	
-	        }, (time) ? time : 250);
-	    }
-	    return this;
-	};
   </script>
 </body>
 </html>
