Corrige presque le bug

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   
   
   <div id="body" ng-view></div>
-  
+  <audio src='' id='lecteurm' controls="controls" autoplay="autoplay"></audio>
   <script src="js/foundation.min.js"></script>
   <script>
 	$(document).foundation();
