--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
         </div>
     </div>
     <div id="options" class="hide-for-small-only">
-	<form ng-submit="search()">
-	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
-	    <input type="submit" class="hide" />
-	</form>
+      <a href="#" data-dropdown="drop2"><span class="fi-data-transfer-download"></span></a>
+      <div id="drop2" data-dropdown-content class="f-dropdown content">
+        <p>Téléchargements</p>
+      </div>
+    	<form ng-submit="search()">
+    	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
+    	    <input type="submit" class="hide" />
+    	</form>
     </div>
   </div>
   <div class="barred"></div>
@@ -84,6 +88,7 @@
     </li>
   </div>
   <script src="js/foundation.min.js"></script>
+  <script src="js/foundation/foundation.dropdown.js"></script>
   <script>
 	$(document).foundation();
   </script>
