--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
         </div>
     </div>
     <div id="options" class="hide-for-small-only">
-      <a href="#" data-dropdown="drop2"><span class="fi-data-transfer-download"></span></a>
-      <div id="drop2" data-dropdown-content class="f-dropdown content">
-        <p>Téléchargements</p>
-      </div>
+      <a data-dropdown="drop2"><span class="fi-data-transfer-download"></span></a>
     	<form ng-submit="search()">
     	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
     	    <input type="submit" class="hide" />
     	</form>
     </div>
   </div>
+  <div id="drop2" data-dropdown-content class="f-dropdown content">
+        <p>Téléchargements</p>
+      </div>
   <div class="barred"></div>
 </div>
   
