--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
         </div>
     </div>
     <div id="options" class="hide-for-small-only">
-      <a data-dropdown="drop2"><span class="fi-data-transfer-download"></span></a>
     	<form ng-submit="search()">
+          <a data-dropdown="drop2" class="big"><span class="fi-data-transfer-download"></span></a>
+
     	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
     	    <input type="submit" class="hide" />
     	</form>
