Améliore encore l'affichage

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
     </div>
     <div id="options" class="hide-for-small-only">
     	<form ng-submit="search()">
-          <a data-dropdown="drop2" class="big"><span class="fi-data-transfer-download"></span></a>
+          <a data-dropdown="bdl" id="bdl"><span class="fi-data-transfer-download"></span></a>
 
     	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
     	    <input type="submit" class="hide" />
     	</form>
     </div>
   </div>
-  <div id="drop2" data-dropdown-content class="f-dropdown content">
+  <div id="bdl" data-dropdown-content class="f-dropdown content">
         <p>Téléchargements</p>
       </div>
   <div class="barred"></div>
