--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
     </div>
     <div id="options" class="hide-for-small-only">
     	<form ng-submit="search()">
-          <a data-dropdown="dropdl" id="bdl"><span class="fi-data-transfer-download"></span></a>
+          <a data-dropdown="dropdl" id="bdl" ng-show="downloads.length > 0"><span class="fi-data-transfer-download"></span></a>
 
     	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
     	    <input type="submit" class="hide" />
     	</form>
     </div>
   </div>
-  <div id="dropdl" data-dropdown-content class="f-dropdown content">
-        <p>Téléchargements</p>
-      </div>
+  <ul id="dropdl" class="[tiny small medium large content]f-dropdown" data-dropdown-content>
+    <li ng-repeat="dl in downloads"><a ng-click="dl.run = false"><strong>[Annuler]</strong> {{ dl.nom }} ({{ dl.nbfiles }} fichier{{ dl.nbfiles | affs }} restant{{ dl.nbfiles | affs }})</a></li>
+  </ul>
   <div class="barred"></div>
 </div>
   
