Corrige un bug style

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     	</form>
     </div>
   </div>
-  <ul id="dropdl" class="[tiny small medium large content]f-dropdown" data-dropdown-content>
+  <ul id="dropdl" class="medium f-dropdown" data-dropdown-content>
     <li ng-repeat="dl in downloads"><a ng-click="dl.run = false"><strong>[Annuler]</strong> {{ dl.nom }} ({{ dl.nbfiles }} fichier{{ dl.nbfiles | affs }} restant{{ dl.nbfiles | affs }})</a></li>
   </ul>
   <div class="barred"></div>
