Améliore encore le design

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div id="options" class="hide-for-small-only">
     	<form ng-submit="search()">
-          <a data-dropdown="dropdl" id="bdl" ng-show="nbDownloads > 0"><span class="fi-data-transfer-download"></span></a>
+          <a data-dropdown="dropdl" data-options="align:left" id="bdl" ng-show="nbDownloads > 0"><span class="fi-data-transfer-download"></span></a>
 
     	    <input type="text" id="rechercher" name="rechercher" ng-model="rechercher" placeholder="Rechercher..." />
     	    <input type="submit" class="hide" />
