--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="bower_components/moment/lang/fr.js"></script>
   <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/checkimages.js"></script>
+  <script src="js/checkimages.js?u=2"></script>
   <!-- <script src="js/animations.js"></script> -->
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
